# NoteNest

./: .gitattributes  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
business/: LEAN_CANVAS.md  PITCH_ONE_PAGER.md
docs/: DIAGRAMS.md  index.html
docs/assets/: app.js  styles.css
docs/demo/: index.html
docs/pricing/: index.html
fixtures/examples/: clinician_soap.example.json  patient_view.example.json
fixtures/templates/: clinician_5cs.schema.json  clinician_soap.schema.json  patient_view.schema.json
sample_notes/: sample1.txt
scripts/: check_pages.sh  pre_submit_check.sh  release_doctor.sh  site_doctor.sh
src/: cli.rs  lib.rs  main.rs
src/cloak/: config.rs  engine.rs  io.rs  mod.rs  report.rs  rules.rs
src/notenest/: extract.rs  mod.rs  protect.rs  redaction.rs  render.rs  summary.rs  types.rs  util.rs
src/util/: fs.rs
tests/: cloak_engine_tests.rs  golden_note_tests.rs  messy_notes_tests.rs  output_quality_upgrade_tests.rs  placeholder_style_tests.rs  quality_tests.rs  redaction_tests.rs  structure_polish_tests.rs  template_fixture_tests.rs
