[package]
name = "notenest"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
csv = "1.3.0"
glob = "0.3.1"
